codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_delete_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Delete this session?
  Cannot be undone. Subagent threads will also be deleted.

❯ 1. No, keep this session  Return to the current session
  2. Yes, delete and exit   Permanently delete this session now

  Press enter to confirm or esc to go back
